@@ -1,15 +1,33 @@
+dist: bionic
+
 language: perl
-perl:
-  - "5.30"
-  - "5.24"
-  - "5.18"
-  - "5.12"
-install: 
-  - cpanm --quiet --notest --installdeps .
-  - cpanm --quiet --notest --skip-satisfied Devel::Cover
+
+env: RELEASE_TESTING=1 AUTOMATED_TESTING=1 DEVEL_COVER=0
+
+matrix:
+  include:
+    - perl: "5.30"
+      env: DEVEL_COVER=1
+    - perl: "5.20"
+      dist: trusty
+    - perl: "5.16"
+      dist: trusty
+    - perl: "5.12"
+      dist: trusty
+    - perl: "5.10"
+      dist: trusty
+
+before_install:
+  - cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)
+  - cpanm --notest Perl::Tidy
+  - cpanm --notest Test::Code::TidyAll
+install:
+  - cpanm --quiet --installdeps --notest --force --skip-satisfied .
+  - if [ "$DEVEL_COVER" = "1" ]; then cpanm --quiet --notest Devel::Cover; fi
 script:
-  - perl Build.PL && cover -test
+  - if [ "$DEVEL_COVER" = "0" ]; then perl Build.PL && ./Build test; fi
+  - if [ "$DEVEL_COVER" = "1" ]; then perl Build.PL && ./Build build && cover -test; fi
 after_success:
-  - cpanm --quiet --notest --skip-satisfied Devel::Cover::Report::Coveralls
-  - cover -report coveralls
-env: RELEASE_TESTING=1 AUTOMATED_TESTING=1
+  - if [ "$DEVEL_COVER" = "1" ]; then cpanm --quiet --notest --skip-satisfied Devel::Cover::Report::Coveralls; fi
+  - if [ "$DEVEL_COVER" = "1" ]; then cover -report coveralls; fi
+sudo: false
