@@ -1,6 +1,7 @@
 Revision history for Catmandu-BibTeX
 
 {{$NEXT}}
+  - fix travis build
 
 0.17  2020-03-04 13:28:49 CET
   - fix travis build
